--- a/XOgame/XOgame/MainWindow.xaml
+++ b/XOgame/XOgame/MainWindow.xaml
@@ -27,6 +27,9 @@
             <ColumnDefinition Width="0.25*"/>
         </Grid.ColumnDefinitions>
 
+        <TextBlock x:Name="xWin" Grid.Row="0" Grid.Column="0" FontSize="20" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+        <TextBlock x:Name="oWin" Grid.Row="0" Grid.Column="2" FontSize="20" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+
         <TextBlock x:Name="x" Text="X" Grid.Row="2" Grid.Column="0" FontSize="20" HorizontalAlignment="Center" VerticalAlignment="Center"/>
 
         <UniformGrid Rows="3" Columns="3" Grid.Row="1" Grid.Column="1" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
